--- a/index.html
+++ b/index.html
@@ -6,13 +6,355 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer type="module" src="/src/main.ts"></script>
     <link rel="stylesheet" href="./src/styles/defaults.css" />
+    <link rel="stylesheet" href="./src/styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
     <title>Quiz Builder</title>
   </head>
   <body>
-    <div>Hello World</div>
-    <button>Button</button>
-    <ul>
-      <li><a href="">test</a></li>
-    </ul>
+    <div class="wrapper">
+      <header>
+        <h1>Quiz Builder</h1>
+        <p class="version">ALPHA 0.0.1</p>
+      </header>
+
+      <main class="created-quizzes">
+        <!-- JavaScript places quizzes here -->
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+        <section class="quiz">
+          <div class="quiz__color"></div>
+          <div class="quiz__details">
+            <h3 class="quiz__title">My first quiz</h3>
+            <p class="quiz__information">Date: 01/02/2020 at 20:00</p>
+            <p class="quiz__information">Questions: 20</p>
+          </div>
+          <div class="quiz__controls-wrapper">
+            <button><span class="material-symbols-rounded"> play_arrow </span></button>
+            <button><span class="material-symbols-rounded"> edit </span></button>
+            <button><span class="material-symbols-rounded"> delete_forever </span></button>
+          </div>
+        </section>
+      </main>
+
+      <button class="create">
+        <span class="material-symbols-rounded"> add_circle </span> Add quiz
+      </button>
+
+      <footer>
+        <span><a href="https://github.com/Hexy32/quiz-builder">contribute</a></span>
+      </footer>
+    </div>
   </body>
 </html>
