Small style adjustment

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </section>
       </main>
 
-      <button class="create">
+      <button class="create" tabindex="1">
         <span class="material-symbols-rounded"> add_circle </span> Add quiz
       </button>
 
